Fixed zh-CN translation and created the language file zh-TW for Traditional Chinese

--- a/languages/en.yml
+++ b/languages/en.yml
@@ -1,7 +1,7 @@
 Home: Home
 About: About
 Writing: Writing
-Archives: Archives
+Projects: Projects
 Search: Search
 Previous post: Previous post
 Next post: Next post
