--- a/languages/zh-CN.yml
+++ b/languages/zh-CN.yml
@@ -1,8 +1,8 @@
 Home: 首页
-About: 关于我
+About: 关于
 Writing: 写作
-Archives: 文章归档
-Search: 搜一搜
+Projects: 项目
+Search: 搜索
 Previous post: 上一篇
 Next post: 下一篇
 Back to top: 回到顶部
