--- a/languages/en.yml
+++ b/languages/en.yml
@@ -1,13 +1,38 @@
-Home: Home
-About: About
-Writing: Writing
-Projects: Projects
-Search: Search
-Previous post: Previous post
-Next post: Next post
-Back to top: Back to top
-Share post: Share post
-TOC: TOC
-Share: Share
-Top: Top
-Menu: Menu
+nav:
+  home: Home
+  about: About
+  articles: Writing
+  projects: Projects
+  search: Search
+
+footer:
+  copyright: Copyright
+
+index:
+  find_me_on: Find me on
+  enum_comma: ','
+  enum_and: and
+  articles: Writing
+  projects: Projects
+
+post:
+  desktop:
+    previous: Previous post
+    next: Next post
+    back_to_top: Back to top
+    share: Share post
+  mobile:
+    menu: Menu
+    toc: TOC
+    back_to_top: Top
+    share: Share
+
+search:
+  search: Search...
+  no_results: No results found.
+
+pagination:
+  page: Page %d of %d
+
+comments:
+  no_js: Please enable JavaScript to view the comments.
