--- a/languages/en.yml
+++ b/languages/en.yml
@@ -33,8 +33,27 @@ search:
   search: Search...
   no_results: No results found.
 
+tag_cloud:
+  zero: No tags
+
 pagination:
   page: Page %d of %d
+
+counter:
+  tag_cloud:
+    zero: No tags
+    one: ""
+    other: ""
+
+  categories:
+    zero: No categories
+    one: ""
+    other: ""
+
+  archive_posts:
+    zero: No posts.
+    one: ""
+    other: ""
 
 comments:
   no_js: Please enable JavaScript to view the comments.
