--- a/languages/custom.yml
+++ b/languages/custom.yml
@@ -15,8 +15,8 @@ index:
   find_me_on: Find me on
   enum_comma: ','
   enum_and: and
-  articles: 文章
-  projects: 项目
+  articles: Writing
+  projects: Projects
 
 post:
   desktop:
