--- a/languages/zh-TW.yml
+++ b/languages/zh-TW.yml
@@ -1,38 +1,61 @@
 nav:
   home: 首頁
   about: 關於
-  articles: 歸檔
-  projects: 專案
+  articles: 文章
+  tag: 標籤
+  category: 分類
+  projects: 項目
   search: 搜尋
 
 footer:
   copyright: Copyright
 
 index:
-  find_me_on: Find me on
+  find_me_on: 出沒地 
   enum_comma: ','
-  enum_and: and
+  enum_and: 和
   articles: 文章
   projects: 項目
+  topics: 標題
+  most_recent: 最近新增
 
 post:
   desktop:
     previous: 上一篇
-    next: 下一篇
-    back_to_top: 返回頂部
-    share: 分享文章
+    next: 下一篇 
+    back_to_top: 回到頁首
+    share: 分享
   mobile:
-    menu: 選單 
-    toc: 目錄
-    back_to_top: 返回頂部
+    menu: 選單
+    toc: 文章目錄
+    back_to_top: 頁首
     share: 分享
 
 search:
   search: 搜尋...
-  no_results: 抱歉，沒有符合您搜尋條件的結果。請換其它關鍵詞再試。
+  no_results: 沒有結果
+
+tag_cloud:
+  zero: 目前還沒有標籤
 
 pagination:
-  page: 頁面 %d / %d
+  page: %d / %d
+
+counter:
+  tag_cloud:
+    zero: 目前沒有標籤
+    one: ""
+    other: ""
+
+  categories:
+    zero: 目前沒有分類
+    one: ""
+    other: ""
+
+  archive_posts:
+    zero: 沒有文章哦！
+    one: ""
+    other: ""
 
 comments:
-  no_js: 加載留言需要在瀏覽器啟用 JavaScript 。
+  no_js: 請開啟 JavaScript 功能來使用留言系統
