--- a/languages/zh-CN.yml
+++ b/languages/zh-CN.yml
@@ -11,7 +11,7 @@ footer:
   copyright: Copyright
 
 index:
-  find_me_on: 在这里找到我
+  find_me_on: 在这里找到我：
   enum_comma: ','
   enum_and: ','
   articles: 文章
