--- a/languages/zh-CN.yml
+++ b/languages/zh-CN.yml
@@ -12,8 +12,8 @@ footer:
 
 index:
   find_me_on: 在这里找到我：
-  enum_comma: ','
-  enum_and: ','
+  enum_comma: ' '
+  enum_and: ' '
   articles: 文章
   projects: 项目
 
