--- a/languages/en.yml
+++ b/languages/en.yml
@@ -1,7 +1,7 @@
 nav:
   home: Home
   about: About
-  articles: Writing
+  articles: Articles
   tag: Tag
   category: Category
   projects: Projects
@@ -14,7 +14,7 @@ index:
   find_me_on: Find me on
   enum_comma: ','
   enum_and: and
-  articles: Writing
+  articles: Articles
   projects: Projects
   topics: Topics
   most_recent: Most recent
