--- a/languages/en.yml
+++ b/languages/en.yml
@@ -16,6 +16,7 @@ index:
   enum_and: and
   articles: Articles
   projects: Projects
+  links: Links
   topics: Topics
   most_recent: Most recent
 
