Fix for one of rows.

--- a/languages/ua.yml
+++ b/languages/ua.yml
@@ -15,7 +15,7 @@ footer:
   copyright: Copyright
 
 index:
-  find_me_on: Знайти мене в
+  find_me_on: Знайди мене в
   enum_comma: ','
   enum_and: і
   articles: Статті
