feat: add cusdis for comments

--- a/languages/en.yml
+++ b/languages/en.yml
@@ -63,6 +63,7 @@ counter:
 
 comments:
   no_js: Please enable JavaScript to view the comments.
+  header: Comments
 
 tooltip:
   copy_tip: Copy to clipboard!
